@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Implement support for filename encryption per RFC 18 for rasters (#3416)
+
 - Fixed segfault when using shapefile with empty geometry and tileindex (#3365)
 
 - Avoid race condition on core_lock on win32 mutex init (#3396)
